tests/baselines/reference/assignToModule.errors.txt
assignToModule.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
assignToModule.ts(2,1): error TS2708: Cannot use namespace 'A' as a value.


==== assignToModule.ts (2 errors) ====
    module A {}
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    A = undefined; // invalid LHS
    ~
!!! error TS2708: Cannot use namespace 'A' as a value.